# rustfetch

./: Cargo.toml  LICENSE  README.md  index.html  index2.html  index3.html
src/: main.rs
